- Fix for JDK 1.8 compatibility