@@ -32,6 +32,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.*;
 
@@ -310,7 +311,7 @@ public class APIImportConfigAdapter {
                                 throw new AppException("Error reading markdown description file: " + markdownFilename, ErrorCode.CANT_READ_CONFIG_FILE);
                             }
                             LOG.debug("Reading local markdown description file: {}", markdownFile.getPath());
-                            markdownDescription.append(newLine).append(Files.readString(markdownFile.toPath()));
+                            markdownDescription.append(newLine).append(new String(Files.readAllBytes(markdownFile.toPath()), StandardCharsets.UTF_8));
                         }
                         newLine = "\n";
                     }
@@ -462,7 +463,7 @@ public class APIImportConfigAdapter {
                 if (cert.getCertBlob() == null) {
                     try (InputStream is = getInputStreamForCertFile(cert)) {
                         String certInfo = APIManagerAdapter.getCertInfo(is, "", cert);
-                        List<CaCert> completedCerts = mapper.readValue(certInfo, new TypeReference<>() {});
+                        List<CaCert> completedCerts = mapper.readValue(certInfo, new TypeReference<List<CaCert>>() {});
                         completedCaCerts.addAll(completedCerts);
                     } catch (Exception e) {
                         throw new AppException("Can't initialize given certificate.", ErrorCode.CANT_READ_CONFIG_FILE, e);
